# webgwas

./: .gitignore  Cargo.toml  README.md  pyproject.toml
backend/: .gitignore  Cargo.toml  README.md  pyproject.toml  settings-deploy.toml  settings.json  settings.toml
backend/.github/workflows/: test.yml
backend/src/: config.rs  errors.rs  igwas.rs  lib.rs  main.rs  models.rs  phenotype_definitions.rs  regression.rs  render_results.rs  utils.rs  worker.rs
backend/src/endpoints/: download.rs  mod.rs  pvalues.rs
backend/src/webgwas_backend/: cache.py  config.py  data_client.py  database.py  igwas_handler.py  main.py  models.py  phenotype_summary.py  s3_client.py  test.py  test_main.py  worker.py
backend/src/webgwas_backend/cli/: build_ukb_reduced.py  etl.py  register_cohort.py
backend/src/webgwas_fastapi/: config.py  data_client.py  main.py  s3_client.py  test_main.py
backend/test_data/: settings.json
backend/test_data/cohort1/: metadata.json  phenotype_data.csv.zst
backend/test_data/cohort1/gwas/: feature3.tsv.zst
backend/test_data/cohort2/: metadata.json  phenotype_left_inverse.csv.zst  phenotypic_covariance.csv
deploy/: .gitignore  README.md  backend.service  deploy.yml  frontend.service  justfile  nginx-basic.conf.j2  nginx.conf.j2  webgwas.service
python/webgwas/: __init__.py  igwas.py  mdav.py  parser.py  phenotype_definitions.py  regression.py  test_igwas.py  test_mdav.py  test_parser.py  test_phenotype_definitions.py
src/: atomics.rs  igwas_prod.rs  lib.rs
