[package]
name = "webgwas"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "webgwas"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.86"
arrow = "52.2.0"
igwas = { git = "https://github.com/tatonetti-lab/indirect-gwas", rev = "4f46fa1e" }
itertools = "0.13.0"
mdav = { git = "https://github.com/zietzm/mdav", version = "0.2.1" }
numpy = "0.21.0"
parquet = "52.2.0"
pyo3 = "0.21.0"
serde = { version = "1.0.208", features = ["derive"] }
zstd = "0.13.2"
