[package]
name = "webgwas"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "webgwas"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.86"
arrow = "53.0.0"
env_logger = "0.11.5"
igwas = { git = "https://github.com/tatonetti-lab/indirect-gwas", rev = "4f46fa1e" }
itertools = "0.13.0"
log = "0.4.22"
mdav = { git = "https://github.com/zietzm/mdav", version = "0.2.1" }
parquet = "53.0.0"
polars = { version = "0.42.0", features = ["dtype-struct", "parquet", "polars-io"] }
serde = { version = "1.0.208", features = ["derive"] }
zstd = "0.13.2"
