[package]
name = "webgwas"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "webgwas"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.86"
arrow = "53.0.0"
blas-src = { version = "0.10.0", features = ["blis"] }
blis-src = { version = "0.2.2", features = ["static"] }
env_logger = "0.11.5"
igwas = { git = "https://github.com/tatonetti-lab/indirect-gwas", rev = "4f46fa1e" }
itertools = "0.13.0"
log = "0.4.22"
mdav = { git = "https://github.com/zietzm/mdav", version = "0.2.1" }
ndarray = { version = "0.15.6", features = ["blas"] }
parquet = "53.0.0"
polars = { git = "https://github.com/pola-rs/polars", version = "0.43.1", features = ["lazy", "parquet", "performant", "ndarray", "rows", "zip_with"] }
rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive"] }
zstd = "0.13.2"
