[project]
name = "webgwas"
version = "0.1.3"
description = "Add your description here"
authors = [
    { name = "zietzm", email = "michael.zietz@gmail.com" }
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "jupyterlab>=4.2.3",
    "pandas>=2.2.2",
    "polars>=1.1.0",
    "pycanon>=1.0.1.post2",
    "pyarrow>=16.1.0",
    "scipy>=1.14.0",
    "zstandard>=0.23.0",
]

[tool.maturin]
python-source = "python"
module-name = "webgwas._lowlevel"
features = ["pyo3/extension-module"]
