[project]
name = "webgwas-backend"
version = "0.1.2"
description = "Add your description here"
authors = [
    { name = "zietzm", email = "michael.zietz@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "sqlmodel>=0.0.19",
    "psutil>=6.0.0",
    "boto3>=1.34.145",
    "botocore>=1.34.145",
    "pydantic>=2.8.2",
    "cachetools>=5.4.0",
    "webgwas @ git+https://github.com/zietzm/webgwas",
    "pandas>=2.2.2",
    "pydantic-settings>=2.3.4",
    "zstandard>=0.23.0",
    "polars>=1.3.0",
    "pyarrow>=17.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/webgwas_backend"]
