[project]
name = "webgwas-backend"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "zietzm", email = "michael.zietz@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "boto3>=1.34.145",
    "botocore>=1.34.145",
    "pydantic>=2.8.2",
    "pandas>=2.2.2",
    "pydantic-settings>=2.3.4",
    "zstandard>=0.23.0",
    "polars>=1.3.0",
    "pyarrow>=17.0.0",
    "dynaconf>=3.2.6",
    "sqlmodel>=0.0.21",
    "connectorx>=0.3.3",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "webgwas @ git+https://github.com/zietzm/webgwas.git",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"etl" = "webgwas_backend.cli.etl:main"
"register" = "webgwas_backend.cli.register_cohort:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.1",
    "ruff>=0.6.2",
    "httpx>=0.27.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/webgwas_backend"]

[tool.ruff.lint.pydocstyle]
convention = "google"
